; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/extr_hwa-rc.c_hwarc_post_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/extr_hwa-rc.c_hwarc_post_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.hwarc = type { %struct.uwb_rc* }
%struct.uwb_rc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_interface*)* @hwarc_post_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hwarc_post_reset(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.hwarc*, align 8
  %4 = alloca %struct.uwb_rc*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %5 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %6 = call %struct.hwarc* @usb_get_intfdata(%struct.usb_interface* %5)
  store %struct.hwarc* %6, %struct.hwarc** %3, align 8
  %7 = load %struct.hwarc*, %struct.hwarc** %3, align 8
  %8 = getelementptr inbounds %struct.hwarc, %struct.hwarc* %7, i32 0, i32 0
  %9 = load %struct.uwb_rc*, %struct.uwb_rc** %8, align 8
  store %struct.uwb_rc* %9, %struct.uwb_rc** %4, align 8
  %10 = load %struct.uwb_rc*, %struct.uwb_rc** %4, align 8
  %11 = call i32 @uwb_rc_post_reset(%struct.uwb_rc* %10)
  ret i32 %11
}

declare dso_local %struct.hwarc* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @uwb_rc_post_reset(%struct.uwb_rc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
